# LoraForge

./: .gitignore  README.md
.claude/: launch.json
code/: CLAUDE.md  Makefile  pyproject.toml  requirements.txt  setup_lambda.sh
code/activity0_sft/: config.yaml
code/activity0_sft/data/: dataset_builder.py
code/activity0_sft/evaluation/: eval.py
code/activity0_sft/training/: qlora_trainer.py
code/activity1_baseline/: config.yaml  main.py  vllm_server.py
code/activity1_baseline/benchmark/: client.py
code/activity1_baseline/evaluation/: perplexity.py
code/activity1_baseline/merge/: merge.py
code/activity1_baseline/reporting/: report_generator.py
code/activity2_quantization/: __init__.py  config.yaml  main.py
code/activity2_quantization/benchmark/: quant_benchmarker.py
code/activity2_quantization/quantizer/: calibration.py  format_selector.py  modelopt_quantizer.py
code/activity2_quantization/reporting/: comparison_reporter.py
code/shared/configs/: base_config.yaml
code/shared/metrics/: cost_estimator.py  latency_metrics.py
code/shared/utils/: gpu_profiler.py  logger.py
documentation/: ACTIVITY_00_SFT_CODE_GUIDE.docx  ACTIVITY_01_DEPLOYMENT_ISSUES_LOG.docx  ACTIVITY_01_MERGE_AND_DEPLOYMENT_CODE_GUIDE.docx  ACTIVITY_02_DEPLOYMENT_ISSUES_LOG.docx  ACTIVITY_02_QUANTIZATION_CODE_GUIDE.docx  ACTIVITY_BREAKDOWN.md  ARCHITECTURE.md  CONCEPT_00_PART1_TRAINING_PIPELINE.docx  CONCEPT_00_PART1_TRAINING_PIPELINE.md  CONCEPT_00_PART2_LORA_ANATOMY.docx  CONCEPT_00_PART2_LORA_ANATOMY.md  CONCEPT_00_PART3_SFT_TRAINING_OBJECTIVE.docx  CONCEPT_00_PART3_SFT_TRAINING_OBJECTIVE.md  CONCEPT_01_MERGE_AND_DEPLOYMENT.docx  CONCEPT_01_MERGE_AND_DEPLOYMENT.md  CONCEPT_02_QUANTIZATION_PIPELINE.docx  GPU_REQUIREMENTS.md  LINKEDIN_NARRATIVE.md  MAKEFILE_GUIDE.md  PROJECT_OVERVIEW.md  TRAINING_ISSUES_LOG.docx  ~$TIVITY_00_SFT_CODE_GUIDE.docx
results/: accuracy_eval_results.json  activity2_quantization_report.html  activity2_quantization_report.md  baseline_report.html  baseline_report.md  baseline_results.json  benchmark_in_progress.json  quant_results.json
